java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint6-hints.pass
Suppress Warning - unchecked
Cast ...toArray(...) to JButton[]
